--- a/.github/workflows/ssr-scraper.yml
+++ b/.github/workflows/ssr-scraper.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          version: 12
+          node-version: 12
       - run: npm install
       - name: Fetch and Check Nodes
         run: npm start
